# guardian

./: .gitignore  LICENSE  PLAN-CONTEXTO.md  PLAN-EVOLUCION.md  PLAN-INTEGRACION.md  PLAN-OPENCODE-PLUGIN.md  PLAN-OPENSOURCE.md  PLAN.md  README.md  SKILL.md  guardian  install.sh  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.dev-data/genome/branches/70d8f57c85b0da5b/projects/rag-test-proj/: rag-chunks.json
.dev-data/genome/branches/70d8f57c85b0da5b/projects/suggest-demo/knowledge/: index.json
.dev-data/genome/branches/70d8f57c85b0da5b/projects/suggest-demo/knowledge/tomes/: frontend-design.md
.github/workflows/: test.yml
.opencode/: package.json
.opencode/plugins/: guardian.ts
commands/: guardian.md
demo/: neural_demo.py
docs/: AGENTS.md  BACKEND.md  CONCEPTOS.md  CONSTRAINTS.md  FEATURES.md  FLUJOS.md  GUIA.md  INSTALACION.md  MODULOS.md  PLAN-V4.1.md  PLAN-V4.6.md  PLAN_FIXES_AUDIT.md  PLAN_FORJA.md  PLAN_V3.md  PLAN_V4.md  REFERENCIA.md  VALIDATION_REPORT_v3.0.4.md
genome/: consciousness.yaml  identity.yaml  schema.yaml
genome/branches/default/: identity.yaml
lib/: guardian.py  guardian_absorb.py  guardian_backend.py  guardian_brain.py  guardian_brain_advisor.py  guardian_brain_migration.py  guardian_brain_schema.py  guardian_brain_symbols.py  guardian_capability.py  guardian_conciencia.py  guardian_evolution.py  guardian_forja.py  guardian_genome.py  guardian_global.py  guardian_knowledge.py  guardian_lineage.py  guardian_mcp.py  guardian_memory.py  guardian_migration_v3_layout.py  guardian_migration_v45.py  guardian_observer.py  guardian_publish.py  guardian_rag.py  guardian_shared.py  guardian_specialization.py  guardian_web.py
lib/lib/: guardian_absorb.py  guardian_backend.py  guardian_brain.py  guardian_brain_migration.py  guardian_brain_schema.py  guardian_lineage.py  guardian_maintain.py  guardian_mcp.py  guardian_memory.py  guardian_plan.py
prompts/: analyze.md  consult.md  evaluate.md  execute.md  guardian-agent.md  identify.md  subagent-architect.md  subagent-context.md  subagent-skills.md
systemd/: nexxoria-guardian.service
templates/: AGENTS.md.template  API_SPEC.md.template  ARCHITECTURE.md.template  BACKEND.md.template  COMPONENTS.md.template  CONSTRAINTS.md.template  FEATURES.md.template  FRONTEND.md.template  STYLE.md.template  UI.md.template
templates/legacy/: AGENTS.md.template  BACKEND.md.template  CONSTRAINTS.md.template  FEATURES.md.template  FRONTEND.md.template  UI.md.template
tests/: conftest.py  test_backend.py  test_base.py  test_brain.py  test_config.py  test_integration.py  test_memory.py  test_neural.py  test_neural_integration.py  test_observations.py  test_phase3.py  test_phase4.py  test_rag.py  test_v4.py  test_v4_e2e.py
