[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexxoria-guardian"
version = "4.8.0"
description = "Cognitive Operating System for AI — razona, evoluciona y completa a cualquier LLM."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Durru", email = "albertodurruthyl@gmail.com"},
]
keywords = [
    "opencode",
    "agent",
    "memory",
    "rag",
    "cognitive",
    "llm",
    "codegraph",
    "tree-sitter",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=5.0",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-go>=0.21",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers"]
test = ["pytest>=7.0"]
lint = ["ruff>=0.1.0"]
telemetry = ["requests"]

[project.urls]
Homepage = "https://github.com/Durru/guardian"
Repository = "https://github.com/Durru/guardian.git"
Issues = "https://github.com/Durru/guardian/issues"

[project.scripts]
guardian = "lib.guardian:main"

[tool.setuptools]
packages = ["lib"]
include-package-data = true
zip-safe = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
